--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 temp/
 .vscode/
 *.exe
+*.dll
+*.so
+*.dylib
+*.o
+*.a
+*.out
+*.class
+*.jar
+*.pyc
+*.pyo
+*.pyd
+*.pdb
+*.log
+*.tmp
+*.zip
+*.tar
+*.gz
+*.bz2
+*.xz
+*.7z
+*.rar
+*.tgz
+*.tbz2
+*.tbz
